# bullet-heck

./: CMakeLists.txt  README.md
include/: Application.hpp  ResourceManager.hpp  State.hpp  StateMachine.hpp
include/Bullets/: Bullet.hpp  Bullets.hpp  Factory.hpp  Manager.hpp
include/Scripts/: Manager.hpp  Script.hpp  Scripts.hpp
include/States/: Game.hpp  Menu.hpp  States.hpp
resource/bullets/defs/: DOCS.md  default.json
resource/bullets/scripts/: SCRIPTING.md  basic.lua
src/: Application.cpp  ResourceManager.cpp  State.cpp  StateMachine.cpp
src/Bullets/: Bullet.cpp  Factory.cpp  Manager.cpp
src/Scripts/: Manager.cpp  Script.cpp
src/States/: Game.cpp  Menu.cpp
